# InsightQL

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
sql/: 01_schema.sql  01_schema_e_indices.sql  02_funciones_rpc.sql  02_indices.sql  03_funciones_rpc.sql  03_seguridad.sql  05_CONSOLIDADO_todas_las_rpc.sql  06_DROP_funciones_no_usadas.sql
src/: __init__.py  config.py  main.py  observability.py  security.py
src/agent/: __init__.py  graph.py  nodes.py  state.py
src/mcp/: __init__.py  client.py  supabase_client.py  tools.py
src/voice/: __init__.py  transcriber.py
tests/: debug_average.py  test_connection.py  test_integration.py  test_mcp_tools.py  test_nodes.py  test_supabase.py  test_verify_brands.py  test_voice.py
